[fix]修复文章笔误

--- a/my-website/docs/coding/C++探索和记录/C++11 懒汉单例模式的静态变量探索.md
+++ b/my-website/docs/coding/C++探索和记录/C++11 懒汉单例模式的静态变量探索.md
@@ -73,7 +73,7 @@ objdump -S test_singleton_static| c++filt
 
 ```
 
-现在我们看下以上汇编都代码上面意思：
+现在我们看下以上汇编代码的解释：
 
 **函数头部信息**
 
@@ -217,7 +217,7 @@ Idx Name          Size      VMA               LMA               File off  Algn
                   CONTENTS, READONLY, DEBUGGING, OCTETS
 ```
 
-我们关注下第三列的信息(`VMA`)，可以看到：
+我们关注下第三列的信息(`VMA`)：
 
 ```shell
 ........
@@ -237,7 +237,7 @@ zjp-android@zjpandroid-virtual-machine:~/test/test_cpp$ readelf -x .bss test_sin
 Section '.bss' has no data to dump.
 ```
 
-我们也可以在知道，**静态变量在ELF一般不占用实际空间**。
+我们也可以知道，**静态变量在ELF一般不占用实际空间**。
 
 同样地，`readelf`也可以查看节头的相关信息：
 
@@ -342,7 +342,7 @@ Key to Flags:
 
 ## ms的初始化线程安全
 
-一开始我们想使用gdb来直接调试以上程序，发现当我打断点在函数`getInstance`中的`static Singleton ms`的时候，会自动跳过，把断点打在了`return ms`这一行，那么这样运行时就会观察不到。
+一开始我想使用gdb来直接调试以上程序，发现当我打断点在函数`getInstance`中的`static Singleton ms`的时候，会自动跳过该行，把断点打在了`return ms`这一行，那么这样运行时就会观察不到。
 
 查看了gdb运行时在`getInstance`处的汇编代码：
 
@@ -359,7 +359,7 @@ End of assembler dump.
 (gdb) 
 ```
 
-我们可以看到在这里`ms`的地址变成了`0x555555558152`。这是因为在`objdump`中观察到的地址时**相对虚拟地址**，是假设从地址0开始加载时的**偏移量**，在ELF中是静态确定的。`0x555555558152`是运行时的实际地址。
+可以看到在这里`ms`的地址变成了`0x555555558152`。这是因为在`objdump`中观察到的地址是**相对虚拟地址**，是假设从地址0开始加载时的**偏移量**，在ELF中是静态确定的。`0x555555558152`是运行时的实际地址。
 
 这里和objdump的汇编代码观察到的行为类似，并没有看到`ms`的初始化过程。我猜测可能是我们的程序过于简单，没有涉及线程间初始化的相关操作，导致编译器进行了优化。
 
@@ -399,7 +399,7 @@ int main() {
 * 增加`std:：thread`开启线程，并在线程中获取单例对象执行`func`
 * 对`Singleton`加入变量`m_a`，并进行非零初始化，期望编译器能强制调用构造函数，这样才能观察到初始化的过程
 
-我在这里打算使用另外一种方式，不适用gdb来查看汇编内容了：使用编译参数和选项来生成**带有详细注释的汇编代码**，方便我们浏览：
+我在这里打算使用另外一种方式，不使用gdb来查看汇编内容了：使用编译参数和选项来生成**带有详细注释的汇编代码**，方便我们浏览：
 
 ```shell
 g++ -S -fverbose-asm test_singleton_static.cpp -o test_singleton_static.s
@@ -410,7 +410,7 @@ g++ -S -fverbose-asm test_singleton_static.cpp -o test_singleton_static.s
 * `-S`：停止在汇编阶段，不进行连接；会输出汇编代码文件(`.s`)
 * `-fverbose-asm`：在汇编代码中添加详细的注释（包含：**原始C++代码行号和内容、变量名和函数名、寄存器使用说明、编译器优化信息等**）
 
-大家可以自行在自己的linux环境中试验，这里我就不将全部文件贴上来了，我们关注下初始化的过程即可：
+大家可以自行在自己的linux环境中试验，这里我就不将全部文件内容贴上来了，我们关注下初始化的过程即可：
 
 1. **静态变量ms的定义**
 
@@ -526,7 +526,7 @@ sequenceDiagram
 
 ## 对PLT的小关注
 
-我使用objdump对`__cxa_guard_acquire`的跳转是如何实现的：
+我使用objdump查看`__cxa_guard_acquire`的跳转是如何实现的：
 
 ```assembly
 0000000000001230 <__cxa_guard_acquire@plt>:
